--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,22 @@
 Package: usaidplot
 Title: Create USAID color palette-based figures in GGPlot2
 Version: 0.0.0.9000
-Author: Jacob Patterson-Stein
+Authors@R: person("Jacob", "Patterson-Stein", email = "jacobpstein@gmail.com",
+  role = c("aut", "cre"))
+Maintainer: Jacob Patterson-Stein <jacobpstein@gmail.com>
 Description: This package allows users to automatically apply USAID's color palette for either discrete or continuous variables.
 License: `use_mit_license()`
 Encoding: UTF-8
+Depends: R (>= 2.10)
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-Import: 
+Suggests: 
+    extrafont, 
+    extrafontdb,
+    ggplot2,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Imports: 
+    extrafont, 
+    extrafontdb,
     ggplot2
-    , extrafont
-    , extrafontdb
