--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,15 +5,12 @@ Authors@R: person("Jacob", "Patterson-Stein", email = "jacobpstein@gmail.com",
   role = c("aut", "cre"))
 Maintainer: Jacob Patterson-Stein <jacobpstein@gmail.com>
 Description: This package allows users to automatically apply USAID's color palette for either discrete or continuous variables.
-License: `use_mit_license()`
+License: MIT + file LICENSE
 Encoding: UTF-8
 Depends: R (>= 2.10)
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
-    extrafont, 
-    extrafontdb,
-    ggplot2,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
