--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,17 +7,16 @@ Maintainer: Jacob Patterson-Stein <jacobpstein@gmail.com>
 Description: This package allows users to automatically apply USAID's color palette for either discrete or continuous variables.
 License: MIT + file LICENSE
 Encoding: UTF-8
-Depends: R (>= 2.10)
+Depends: R (>= 2.10),
+    extrafont, 
+    extrafontdb,
+    ggplot2
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
-    extrafont, 
-    extrafontdb,
-    ggplot2
-Depends: 
     extrafont, 
     extrafontdb,
     ggplot2
